# msvgd

./: .gitignore  README.md  msvgd.py  pyproject.toml  setup.py  tests.ipynb
msvgd/: Testing.ipynb  __init__.py  msvgd.py  msvgd_torch.py
